# senior_project

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  setup_docker.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: RL.launch.py  RL_multi.launch.py  sam3.launch.py
log/: latest_build  latest_list
scripts/: hard_reset.sh  multi_robot_learner.py  multi_robot_monitor.py  multi_stretch_arena.py  multi_stretch_driver.py
scripts/models/current/: agent.pt  agent.pt.tmp
scripts/runs/stretch_hard_reset/: events.out.tfevents.1765315479.sbrainard.34249.0  events.out.tfevents.1765315521.sbrainard.34550.0  events.out.tfevents.1765315561.sbrainard.34871.0  events.out.tfevents.1765315689.sbrainard.35836.0  events.out.tfevents.1765381691.sbrainard.29914.0  events.out.tfevents.1765381731.sbrainard.30261.0  events.out.tfevents.1765381771.sbrainard.30574.0  events.out.tfevents.1765381811.sbrainard.30902.0  events.out.tfevents.1765381852.sbrainard.31229.0  events.out.tfevents.1765381891.sbrainard.31554.0  events.out.tfevents.1765381931.sbrainard.31906.0  events.out.tfevents.1765381972.sbrainard.32215.0  events.out.tfevents.1765382012.sbrainard.32538.0  events.out.tfevents.1765382123.sbrainard.34611.0  events.out.tfevents.1765382195.sbrainard.36650.0  events.out.tfevents.1765382381.sbrainard.37205.0  events.out.tfevents.1765382822.sbrainard.39570.0  events.out.tfevents.1765382960.sbrainard.39983.0  (+15 more)
senior_project/: goal_spawner.py  learner_node.py  sam3_camtest.py  sam3_ros_node.py  sam3_server.py
(+6 files in other folders)
